--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="about-right">
                 <h4>Sobre Nosotros</h4>
                 <h1>SUMECA SRL</h1>
-                <p>SUMECA SRL, Suministros Médicos del Caribe, es una empresa especializada en la provisión de equipos y suministros médicos. Con un fuerte enfoque en la calidad y la confiabilidad, SUMECA SRL se dedica a abastecer a hospitales, clínicas y profesionales de la salud con una amplia gama de productos médicos esenciales.
+                <p>Suministros Médicos del Caribe se especializa en la venta de equipos médicos y materiales gastables para clínicas y hospitales. Nos dirigimos a profesionales de la salud, ofreciendo productos de alta calidad y un servicio siempre comprometido con la satisfacción y eficiencia, garantizando soluciones confiables para el sector médico y de imágenes.
                 </p>
                 <div class="address">
                     <ul>
